# SayZhong

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.ai-testing.yml
.github/: copilot-instructions.md
.github/instructions/: sayzhong.instructions.md
.github/workflows/: ci.yml  deploy-infrastructure.yml
docs/: dev-container-foundry-comparison.md  dev-container-foundry-integration.md
docs/conversations/: 2025-05-23-python-project-setup.md  2025-05-23-requirements-planning.md  2025-05-24-adr-architecture-decisions.md  2025-05-24-requirements-update.md  2025-05-24-technical-research.md  2025-06-02-complete-epic-alignment-conversational-focus.md  2025-06-02-conversational-mandarin-focus.md  2025-06-02-poc-vocabulary-focus-update.md
docs/planning/: requirements.md
docs/planning/adr/: 000-architecture-overview.md  001-ai-framework-architecture.md  002-state-management-strategy.md  003-data-storage-architecture.md  004-authentication-user-management.md  005-security-architecture.md  006-testing-strategy-architecture.md  007-deployment-devops-architecture.md  008-performance-scalability-architecture.md  016-integration-api-architecture.md  (+7 more)
docs/research/: assessment_methods.md  chinese_processing.md  database_tracking.md  gamification.md  hybrind_learning_plan.md  mandarin_vocab_datasets.md  methods.md  optimal_learning.md  phonetic_approximations.md  sample_study_plan.md  software.md  spaced_repetion.md  streamlit.md
infrastructure/: main.bicep  main.tf  outputs.tf  terraform.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/: dev.tfvars  prod.tfvars  staging.tfvars
infrastructure/parameters/: dev.parameters.json  prod.parameters.json  staging.parameters.json
scripts/: check_dev.py  deploy-infrastructure.sh  foundry-local-dev.sh  run_dev.py  setup_dev.py
spike/FoundryLocal/: PROJECT_COMPLETE.md  README.md  TEST_RESULTS.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_runner.py  test_semantic_kernel_direct.py  validate_integration.py
spike/FoundryLocal/examples/: basic_chat.py  basic_chat_demo.py  semantic_kernel_integration.py  streaming_example.py
spike/FoundryLocal/src/: __init__.py  foundry_manager.py  semantic_kernel_service.py
spike/FoundryLocal/tests/: __init__.py  test_foundry_manager.py  test_semantic_kernel_integration.py  test_semantic_kernel_simple.py
src/sayzhong/: __init__.py
tests/: conftest.py  test_core.py  test_package.py
(+14 files in other folders)
